fixtures/invalid/parse_error.latch
-- @reg offset=0x00
-- @field bits=0 name=en access=RW
